tests/paczka1/small_fuzzy/63299354.err
Error in line 6: qTMOjT8tiN S616 43,7
Error in line 8: qTMOjT8tiN S980 84,5
